The API is subject to change and not guaranteed to be compatible
with the later release.
USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!

* Add an 'accept-all-mac-addresses' property to the ethernet setting
  to accept frames with any MAC address (also known as promiscuous
  mode).
* nmcli: fix setting property aliases to empty value to reset the
  default value.

=============================================
NetworkManager-1.30
Overview of changes since NetworkManager-1.28
=============================================

* Increase timeout of NetworkManager-wait-online.service to 60 seconds.
* Add "ipv4.dhcp-client-id=ipv6-duid" option for RFC4361.
* The dhcpcd plugin now requires a minimum version of dhcpcd-9.3.3 with
  the --noconfigure option. Using an older version will cause dhcpcd to
  exit with a status code of 1.
* Support building against musl libc.
* Support new ethtool offload features.
* Add support for WPA3 Enterprise Suite-B 192 bit mode.
* Add support for handling Veth devices.
* New hostname settings for controlling configuring the hostname from
  reverse DNS lookup and from DHCP.
* OVS: support configuring external-ids.
* libnm: nm_setting_bond_add_option() no longer validates the
  option that is set. Instead, use nm_connection_verify() to validate
  the profile.
* libnm: add support for reading/writing keyfile format. This required to
  relicense previously GPL-2.0+ code as LGPL-2.1+ with the agreement of the
  copyright holders.
* initrd: support for rd.net.timeout.carrier option.
* initrd: support new ip method "link6" for IPv6 link-local only.
* ci: use ci-templates for containers on gitlab-ci.
* ci: test build against Alpine Linux on gitlab-ci.
* build: new configure option to set path to "polkit-agent-helper-1".
* Many bugfixes, improvements and translation updates.

=============================================
NetworkManager-1.28
Overview of changes since NetworkManager-1.26
=============================================
